fix z-index masking ondblclick

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ img, svg {
 }
 
 .filter{
-  z-index: 50;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
